# terminal_messenger

./: Cargo.toml  readme.md  readme.txt
crates/client/: Cargo.toml
crates/client/src/: app.rs  main.rs  ui.rs  websocket.rs
crates/client/src/components/: disconnected.rs  header.rs  logging_in.rs  messages_list.rs
crates/client/src/ui/: add_server.rs  chat.rs  disconnected.rs  exiting.rs  help.rs  login.rs  server_selection.rs  set_user.rs  utils.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  commander.rs  main.rs  websocket.rs
src/: client.rs  server.rs
src/client/: app.rs  client.rs  ui.rs
src/server/: app.rs  commander.rs  server.rs  websocket.rs
src/server/websocket/: websocket.rs
