[package]
name = "terminal_messenger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17"
tokio-tungstenite = "0.17"
futures = "0.3"
futures-util = "0.3"
url = "2"
tui = "0.19"
crossterm = "0.25"
