[package]
name = "terminal_messenger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17"
tokio-tungstenite = "0.17"
futures = "0.3"
futures-util = "0.3"
url = "2"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3"
libc = "0.2"
