[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17"
tokio-tungstenite = "0.17"
futures = "0.3"
futures-util = "0.3"
url = "2"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3"
libc = "0.2"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.4", features = ["v4"] }