[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tungstenite = "0.24"
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"
url = "2.5.2"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.3"
libc = "0.2"
log = "0.4"
env_logger = "0.11.5"
uuid = { version = "1.4", features = ["v4"] }
rodio = "0.19.0"
